--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,14 @@ Description:
     classification allows you to provide a target in a sentence. 
     Only for this target, the sentiment is then predicted. 
     This is more reliable in many cases, as demonstrated by the following 
-    simplistic example: "I like Bert, but I hate Robert."
+    simplistic example: 	''I like Bert, but I hate Robert.''
 License: use_gpl3_license()
 Encoding: UTF-8
+URL: https://github.com/fhamborg/sentiment4news
+Note: The R package is build on the python package NewsMTSC. More information 
+    and  high-quality data set of over 11k sentences and a state-of-the-art 
+    classification model can be found here:
+    https://github.com/fhamborg/NewsMTSC
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
